jenkins/jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1 #extensions/v1beta1   # networking.k8s.io/v1  networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  #  tls:
  #    - secretName: helloworld-secret
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins-service
                port:
                  number: 80
    - host: master-node
      http:
        paths:
          - path: /jenkins
            pathType: Prefix
            backend:
              service:
                name: jenkins-service
                port:
                  number: 80
